--- a/stylesheet.css
+++ b/stylesheet.css
@@ -5,19 +5,43 @@
 .navbar-brand{
     font-size: 30px;
     font-weight: bold;
-    color:rgb(47, 180, 180);
+    color:rgb(8, 129, 90);
 }
 .nav-link{
-    color:rgb(78, 98, 244);
+    color:rgb(27, 43, 166);
+    border: 2px solid rgb(220, 251, 220);
+    border-radius: 10px;
+    padding: 8px 15px;
+    transition:transform 0.3s ease-in-out, background-color 0.3s ease-in-out;
+    
 }
+.nav-link:hover{
+    background-color: rgb(220, 251, 220);
+    color: rgb(4, 154, 49);
+    transform: scale(1.15);
+    font-weight: bold;
+    
+}   
 .dropdown-item{
     color:rgb(4, 154, 49);
+    border:none;
+    border-radius: 10px;
+    padding: 8px 15px;
+    transition: transform 0.3s ease-in-out, background-color 0.3s ease-in-out;
 }
+.dropdown-item:hover{
+    background-color: rgb(120, 204, 253);
+    color: rgb(4, 154, 49);
+    transform: scale(1.15);
+    font-weight: bold;
+}   
 .dropdown-menu{
     background-color: #d5ebfb;
     text-align: center;
+    border: 2px solid rgb(183, 250, 183);
     border-radius: 10px;
-    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
+    padding:10px;
+    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
 }
 body{
     background-color: #faecec;;
