--- a/stylesheet.css
+++ b/stylesheet.css
@@ -9,7 +9,7 @@
 }
 .nav-link{
     color:rgb(27, 43, 166);
-    border: 2px solid rgb(220, 251, 220);
+    border: none;
     border-radius: 10px;
     padding: 8px 15px;
     transition:transform 0.3s ease-in-out, background-color 0.3s ease-in-out;
@@ -44,10 +44,14 @@
     box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
 }
 body{
-    background-color: #faecec;;
+    background:url(img/yourname.jpg) no-repeat center center fixed;
+    background-size: cover;
+    backdrop-filter: blur(3px);
 }
 .navbar{
-    background-color: #cce4f2;;
+    background: linear-gradient(to right, #91fba6, #e6f896);
+    border-radius: 10px;
+    box-shadow: 0 4px 10px rgba(253, 123, 249, 0.3);
 }
 .custom-search-btn{
     background-color: #81fea4;
@@ -61,7 +65,8 @@ body{
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
 }
 .custom-search-btn:hover{
-    background-color: #11c644;
+    background-color: #23ee5c;
+    transform: scale(1.15);
 }
 .carousel-img{
     width:1000px;
@@ -71,54 +76,58 @@ body{
     border-color: #03d940;
     border-width: 5px;
     border-style: solid;
+    opacity: 0.95;;
 }
 .carousel-inner{
-    background-color: #0b0b0b;
+    background-color: rgba(0, 0, 0, 0.3);
     padding: 10px;
     border-radius: 13px;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
 }
 h1{
-    color:rgb(31, 167, 87);
+    color:rgb(25, 144, 23);
+    background: linear-gradient(to right, #f697e3, #8a8aff);
     font-size: 3em;
-    box-shadow: 2px 4px 10px rgba(227, 52, 52, 0.3);
-    padding:8px
-}
-.heading1{
-    background-color:rgba(213, 210, 210, 0.6); 
-    border-radius: 5px;
+    box-shadow: 2px 4px 10px rgba(92, 250, 44, 0.3);
+    padding:8px;
+    border-radius: 10px;
 }
 h2{
-    color:rgb(7, 96, 250);
+    color:rgb(78, 85, 226);
     font-size: 2.5em;
     box-shadow: 2px 4px 10px rgba(31, 231, 161, 0.3);
     padding:8px
 }
 .heading2{
-    background-color:rgba(213, 210, 210, 0.6); 
+    background: linear-gradient(to right, #f3c19e, #fc8be0); 
     border-radius: 5px;
 }
 .card{
-    border-radius: 15px;
-    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
+    border: 3px solid rgb(119, 213, 244);
+    border-radius: 13px;
+    background: rgba(255, 255, 255, 0.1);
+    backdrop-filter: blur(10px);
+    box-shadow: 3px 4px 10px rgba(233, 246, 53, 0.3);
     transition: transform 0.3s ease-in-out;
 }
 .card:hover{
     transform: scale(1.07);
-    box-shadow: 0 8px 20px rgba(0, 0, 0, 0.3);
+    box-shadow: 0 8px 20px rgba(235, 27, 27, 0.3);
 }
 .card img{
     height:250px;
     object-fit: cover;
+    border:2px solid rgb(181, 251, 181);
+    border-radius: 10px;
 }
 h5.card-title{
-    color:rgb(90, 49, 49);
+    color:rgb(241, 81, 81);
     font-size: 2.2em;
     text-align: center;
     font-weight: bold;
 }
 p.card-text{
-    color:rgb(62, 80, 80);
+    color:rgb(103, 223, 223);
     font-size: 1.02em;
     text-align: left;
 }
@@ -138,7 +147,7 @@ p.card-text{
     transform: scale(1.07);
 }
 #animeAccordion{
-    background-color: #f5d1d1;
+    background-color: rgba(198, 170, 170, 0.1);
     border-radius: 10px;
     padding: 20px;
     box-shadow: 0 4px 10px rgba(253, 156, 156, 0.3);
@@ -150,25 +159,26 @@ p.card-text{
     overflow:hidden;
 }
 .accordion-button{
-    background-color: #f1fce9;
+    background-color: rgb(216, 247, 193);
     color:#e73333;
     font-weight: bold;
     font-size: 1.4rem;
-    transition:all 0.3s ease;
+    transition:all 0.3s ease-in-out;
 }
 .accordion-button:hover{
-    background-color: #e0f7e0;
+    background-color: #94ef94;
     color: #c70000;
 }
 .accordion-body{
-    background-color: #f6ecec;
+    background-color: #f9c9c9;
     font-size: 1.2rem;
     color:#2982f6
 }
 .footer{
-    background-color: #f1f1f1;
+    background-color: rgba(249, 181, 181, 0.1);
     text-align: center;
     font-size: 1.2em;
     font-weight: bold;
-    color: #333;
+    color: #b4b4b4;
+    border-radius: 10px;;
 }
