--- a/stylesheet.css
+++ b/stylesheet.css
@@ -182,3 +182,29 @@ p.card-text{
     color: #b4b4b4;
     border-radius: 10px;;
 }
+
+.gallery-container{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap:20px;
+    padding: 20px;
+}
+.gallery{
+    border: 2px solid rgb(53, 209, 160);
+    border-radius: 10px;
+    overflow: hidden;
+    text-align: center;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
+    transition: transfors 0.3s;
+}
+.gallery:hover{
+    transform: scale(1.05);
+    border-color: rgb(137, 160, 244);
+}
+.gallery img{
+    width: 100%;
+    height: 200px;
+    object-fit: cover;
+    display: block;
+}
+
